<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LittleTzaar</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="preferences">Preferences</string>
    <string name="leader_board">Leader Board</string>
    <string name="color_white">White</string>
    <string name="color_black">Black</string>

    <string-array name="difficulty">
        <item>No Challenge</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="difficulty">Difficulty</string>
    <string name="player_color">Player Color</string>
    <string name="piece_type">Piece Type</string>

    <string-array name="player_color">
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string-array name="start_positions">
        <item>Random</item>
        <item>Fixed</item>
    </string-array>

    <string name="start_positions">Start Positions</string>
    <string name="start_game">Start Game</string>
    <string name="game">Game</string>
    <string name="menu_settings">Settings</string>
    <string name="white_tott">White Tott</string>
    <string name="white_tzarra">White Tzarra</string>
    <string name="white_tzaar">White Tzaar</string>
    <string name="black_tott">Black Tott</string>
    <string name="black_tzarra">Black Tzarra</string>
    <string name="black_tzaar">Black Tzaar</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_game">Exit game?</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose.</string>
    <string name="play_again">Play again</string>
    <string name="quit_game">Quit game</string>
    <string name="black_tott_count">15</string>
    <string name="black_tzarra_count">9</string>
    <string name="black_tzaar_count">6</string>
    <string name="white_tott_count">15</string>
    <string name="white_tzarra_count">9</string>
    <string name="white_tzaar_count">6</string>

</resources>