<?xml version="1.0" encoding="UTF-8"?>
<com.github.littletzaar.GameViewGroup 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/game_view"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	tools:context=".GameActivity">

	<!-- White Totts -->

	<ImageView android:id="@+id/wto1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/white_tott"
	    android:scaleType="center"
	    android:src="@drawable/white_tott"
	    android:visibility="visible" />
	<ImageView android:id="@+id/wto2"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto3"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto4"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto5"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto6"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto7"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto8"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto9"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/white_tott"
	    android:duplicateParentState="true"
	    android:scaleType="center"
	    android:src="@drawable/white_tott"
	    android:visibility="visible" />
	<ImageView android:id="@+id/wto10"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto11"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto12"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto13"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto14"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />
	<ImageView android:id="@+id/wto15"
		android:scaleType="center"
	    android:src="@drawable/white_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tott" />

	<!-- White Tzarras -->
	
	<ImageView android:id="@+id/wta1"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta2"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta3"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta4"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta5"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta6"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta7"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta8"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />
	<ImageView android:id="@+id/wta9"
		android:scaleType="center"
	    android:src="@drawable/white_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzarra" />

	<!-- White Tzaars -->
	
	<ImageView android:id="@+id/wtz1"
		android:scaleType="center"
	    android:src="@drawable/white_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzaar" />
	<ImageView android:id="@+id/wtz2"
		android:scaleType="center"
	    android:src="@drawable/white_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzaar" />
	<ImageView android:id="@+id/wtz3"
		android:scaleType="center"
	    android:src="@drawable/white_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzaar" />
	<ImageView android:id="@+id/wtz4"
		android:scaleType="center"
	    android:src="@drawable/white_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzaar" />
	<ImageView android:id="@+id/wtz5"
		android:scaleType="center"
	    android:src="@drawable/white_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzaar" />
	<ImageView android:id="@+id/wtz6"
		android:scaleType="center"
	    android:src="@drawable/white_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/white_tzaar" />

	<!-- Black Totts -->
	
	<ImageView android:id="@+id/bto1"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto2"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto3"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto4"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto5"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto6"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto7"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto8"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto9"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto10"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto11"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto12"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto13"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto14"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />
	<ImageView android:id="@+id/bto15"
		android:scaleType="center"
	    android:src="@drawable/black_tott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tott" />

	<!-- Black Tzarras -->
	
	<ImageView android:id="@+id/bta1"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta2"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta3"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta4"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta5"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta6"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta7"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta8"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />
	<ImageView android:id="@+id/bta9"
		android:scaleType="center"
	    android:src="@drawable/black_tzarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzarra" />

	<!-- Black Tzaars -->
	
	<ImageView android:id="@+id/btz1"
		android:scaleType="center"
	    android:src="@drawable/black_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzaar" />
	<ImageView android:id="@+id/btz2"
		android:scaleType="center"
	    android:src="@drawable/black_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzaar" />

	<ImageView
	    android:id="@+id/btz3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/black_tzaar"
	    android:scaleType="center"
	    android:src="@drawable/black_tzaar"
	    android:visibility="visible" />

	<ImageView android:id="@+id/btz4"
		android:scaleType="center"
	    android:src="@drawable/black_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzaar" />
	<ImageView android:id="@+id/btz5"
		android:scaleType="center"
	    android:src="@drawable/black_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzaar" />
	<ImageView android:id="@+id/btz6"
		android:scaleType="center"
	    android:src="@drawable/black_tzaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:visibility="visible"
		android:contentDescription="@string/black_tzaar" />
</com.github.littletzaar.GameViewGroup>
